[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/asset_detail_view/asset_detail_view.gd" type="Script" id=1]
[ext_resource path="res://scenes/resources/panel_variant_01.stylebox" type="StyleBox" id=2]
[ext_resource path="res://scenes/asset_detail_view/tag_list.tscn" type="PackedScene" id=3]

[node name="AssetDetailView" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 1.0
margin_top = 1.0
margin_right = 1023.0
margin_bottom = 599.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 1017.0
margin_bottom = 593.0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer"]
margin_right = 1012.0
stretch_mode = 6

[node name="DetailLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 4.0
margin_right = 1012.0
margin_bottom = 18.0
align = 1

[node name="AllSelectedTagsLabel" type="Label" parent="MarginContainer/VBoxContainer"]
visible = false
margin_top = 22.0
margin_right = 1012.0
margin_bottom = 36.0
text = "All selected assets have these tags:"

[node name="TagsAllHaveList" parent="MarginContainer/VBoxContainer" instance=ExtResource( 3 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 22.0
margin_right = 1012.0
margin_bottom = 22.0

[node name="SomeSelectedTagsLabel" type="Label" parent="MarginContainer/VBoxContainer"]
visible = false
margin_top = 26.0
margin_right = 1012.0
margin_bottom = 40.0
text = "Some selected assets have these tags:"

[node name="TagsSomeHaveList" parent="MarginContainer/VBoxContainer" instance=ExtResource( 3 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 44.0
margin_right = 1012.0
margin_bottom = 44.0

[node name="TagEntry" type="LineEdit" parent="MarginContainer/VBoxContainer"]
margin_top = 22.0
margin_right = 1012.0
margin_bottom = 46.0
placeholder_text = "Add tag"

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer"]
margin_top = 50.0
margin_right = 1012.0
margin_bottom = 588.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="remove_tag_requested" from="MarginContainer/VBoxContainer/TagsAllHaveList" to="." method="_on_remove_tag_requested"]
[connection signal="remove_tag_requested" from="MarginContainer/VBoxContainer/TagsSomeHaveList" to="." method="_on_remove_tag_requested"]
[connection signal="text_entered" from="MarginContainer/VBoxContainer/TagEntry" to="." method="_on_TagEntry_text_entered"]
